test/integration/good/lang/good_nested_decl.stan
functions {
  real foo() {
    if (1)
     real this_does_parse = 0, try_me;
    return 0;
  }
}
