test/integration/bad/missing_dist_suffix/non_existing_distribution_suffix4.stan
data { 
}
model {  
    target += von_mises_notasuffix(1,0,1);
}
